--- a/DynOcc Analysis.Rmd
+++ b/DynOcc Analysis.Rmd
@@ -30,49 +30,59 @@ gm_mean = function(x, na.rm=TRUE, zero.propagate = FALSE){
 ### Function to simulate the data
 Using this function to simulate a dynamic occupancy model with *n* points, *t* years (primary periods), *d* days (secondary periods), initial occupancy $\psi$, survival probability $\phi$, colonization probability $\gamma$ and detection probabilty *p*:
 ```{r cars}
-data.generator<-function(points,days,psi,p,phi,gamma,years) {
+data.generator<-function(points,days,psi1,p,phi,gamma,years) {
         require(unmarked)
-        #first year of data
-        y1<-matrix(NA,nr=points,nc=days)
-        #generate the expected occupancies
-        z<-rbinom(points,1,psi)
-        #generate the observations
-        for(i in 1:points)
-                y1[i,]<-rbinom(days,1,z[i]*p)
-        #subsequent years
-        #three dimensional matrix to store the results
-        yk<-array(NA,dim=c(points,days,years))
-        yk[,,1]<-y1
-        for(k in 2:years){
-        #generate the deterministic part of the model
-                occ<-apply(yk[,,k-1],1,max,na.rm=T)
-                z<-rbinom(points,1,occ*phi+(1-occ)*gamma)
-        #generate the observations
-        for(i in 1:points)
-                yk[i,,k]<-rbinom(days,1,z[i]*p)
-     
-        }  
-        # convert results to a two dimensional matrix for colext
-        yk <- matrix(yk, points, days*years)
-        #ny <- matrix(as.character(1:years),nrow(yk), years, byrow=TRUE)
+        psi <- rep(NA, years)                       # Occupancy probability
+        muZ <- z <- array(dim = c(points, years))        # Expected and realized occurrence
+        y <- array(NA, dim = c(points, days, years))        # Detection histories
+        
+        psi[1] <- psi1
+        
+        # Generate latent states of occurrence
+        # First year
+        z[,1] <- rbinom(points, 1, psi[1])           # Initial occupancy state
+        # Later years
+        for(i in 1:points){                          # Loop over sites
+                for(k in 2:years){                        # Loop over years
+                        muZ[k] <- z[i, k-1]*phi + (1-z[i, k-1])*gamma
+                        z[i,k] <- rbinom(1, 1, muZ[k])
+                }
+        }
+        
+        # Generate detection/non-detection data
+        for(i in 1:points){
+           for(k in 1:years){
+              prob <- z[i,k] * p
+              for(j in 1:days){
+                 y[i,j,k] <- rbinom(1, 1, prob)
+              }
+           }
+        }
+        # Compute annual population occupancy
+        for (k in 2:years){
+           psi[k] <- psi[k-1]*phi + (1-psi[k-1])*gamma
+        }
+
+        yk <- matrix(y, points, days*years)
+        
         # store data in an unmarkedMultFrame object so it is ready for analysis
         yUMF <- unmarkedMultFrame(y = yk, numPrimary = years)
-        yUMF
+        list(yUMF = yUMF,psi = psi)
  } 
 ```
 Simulate some data:
 ```{r}
 set.seed(400)
-data <- data.generator(points = 30,days = 30, psi = 0.5, p = 0.5, phi = 0.2, 
-                       gamma = 0, years = 5)
+data <- data.generator(points = 60,days = 30, psi1 = 0.5, p = 0.5, phi = 0.99, 
+                       gamma = 0, years = 10)
 
 #Look at the first year of data
-summary(data)
+summary(data$yUMF)
 ```
 Now, fit a dynamic occupancy model using colext
 ```{r}
 model <- colext(psiformula = ~1,gammaformula = ~1,epsilonformula = ~1, 
-                pformula = ~1, data = data, method = "BFGS",se = FALSE)
+                pformula = ~1, data = data$yUMF, method = "BFGS",se = FALSE)
 summary(model)
 backTransform(model,type=c("psi"))
 backTransform(model,type=c("col"))
@@ -81,26 +91,27 @@ backTransform(model,type=c("det"))
 ```
 Now compare the naive occupancy from the simulation to the fitted occupancy:
 ```{r}
-data3d <- array(data@y,dim = c(30,30,5))
-obs <- apply( apply(data3d, c(1,3), max, na.rm = T), 2, sum) / nrow(data3d)
+#data3d <- array(data@y,dim = c(60,30,10))
+#obs <- apply( apply(data3d, c(1,3), max, na.rm = T), 2, sum) / nrow(data3d)
+
 # Estimate the projected trajectory - prediction of occupancy based on an infinite sample of sites
 mod <- as.numeric(projected(model)[2,])
 # Estimate the smoothed trajectory - prediction of occupancy based on the actual sampled sites
 mods <- as.numeric(smoothed(model)[2,])
 
-plot(1:5, obs, type="p",ylim=c(0,1),xlab="time",ylab="occupancy"); lines(1:5, mod); lines(1:5, mods, lty=2)
+plot(1:10, data$psi, type="p",ylim=c(0,1),xlab="time",ylab="occupancy"); lines(1:10, mod); lines(1:10, mods, lty=2)
 ```
 Here is a function that repats this process for an arbitrary number of simulations *nsim* and also calculates the slope of the trend and the number of years required to detect change:
 
 ```{r = simulatetredn function}
-simulatetrend <- function(points = 10,days = 30, psi = 0.5, p = 0.2, phi = 0.2, gamma = 0, years = 5, nsim = 5) {
+simulatetrend <- function(points, days, psi1, p, phi, gamma, years, nsim) {
         #store results
         #gm_lambda <- numeric()
         time <- 1:years
         results <- foreach(i = 1:nsim, .combine = rbind, .packages = "unmarked", .export = c("data.generator","gm_mean")) %dopar% {
                 #generate data and store projected results
-                data <- data.generator(points,days,psi,p,phi,gamma,years)
-                model <- colext(~1, ~1, ~1, ~1, data = data, method = "BFGS",se = FALSE)
+                data <- data.generator(points,days,psi1,p,phi,gamma,years)
+                model <- colext(~1, ~1, ~1, ~1, data = data$yUMF, method = "BFGS",se = FALSE)
                 timeseries <- as.numeric(smoothed(model)[2,])
                 
                 #calculate difference between year 1 and year n
@@ -126,7 +137,7 @@ registerDoParallel(cl)
 ```
 ```{r, cache = TRUE}
 # Run a simulation
-test <- simulatetrend(points = 60, psi = 0.2, gamma = 0.05, phi = 0.9, nsim = 100, years = 15)
+test <- simulatetrend(points = 60, days = 30, psi1 = 0.2, gamma = 0, phi = 0.9, nsim = 100, years = 10, p = 0.5)
 ```
 and then graphing the results:
 ```{r,echo=FALSE}
@@ -152,8 +163,6 @@ and the number of years it takes to detect the change
 ```{r}
 names(changes) <- c(1:ncol(changes))
 confint <- apply(changes,2,quantile,c(0.1,0.9))
-#year where change is
-#round(confint,digits = 2)
 y <- which(round(confint[1,],2) > 0)
 ifelse(length(y)==0,0,min(y))
 
