--- a/DynOcc Analysis.Rmd
+++ b/DynOcc Analysis.Rmd
@@ -162,6 +162,7 @@ ggplot(slopes,aes(x=slopes)) + geom_histogram() + geom_density()
 and the number of years it takes to detect the change
 ```{r Years of change}
 names(changes) <- c(1:ncol(changes))
+# This can change to 0.1, 0.01, etc.
 alpha <- 0.05
 confint <- apply(changes,2,quantile,alpha)
 y <- which(round(confint,2) > 0)
